crates/keron-lang/tests/corpus/errors/check/fn_named_before_positional.keron
fn f(a: Int, b: Int): Int { a + b }
val x: Int = f(a = 1, 2)
